# localstripe

./: .gitignore  .travis.yml  CONTRIBUTING.rst  Dockerfile  Makefile  README.rst  azure-pipelines.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.sh
.github/workflows/: docker.yml  test.yml  tests.yaml
cloudbuild/: main.yaml
helm/stripe-mock/: Chart.yaml  values.yaml
helm/stripe-mock/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  redis-config.yaml  service.yaml  serviceaccount.yaml
helm/stripe-mock/templates/tests/: test-connection.yaml
localstripe/: __init__.py  __main__.py  checkout.py  errors.py  fake-stripe-v3.js  gunicorn.conf.py  localstripe-v3.js  redis_store.py  resources.py  resources.py.orig  server.py  store.py  utilities.py  webhooks.py
samples/pm_setup/: README.rst  index.html  pm_setup.js  server.py
stripe_mock_server/: __init__.py  errors.py  fake-stripe-v3.js  resources.py  server.py
