[tool.poetry]
name = "localstripe"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GNU3"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.4"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
isort = "^5.7.0"
neovim = "^0.3.1"
python-language-server = {extras = ["all"], version = "^0.36.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
